# sales-pipeline

./: .pre-commit-config.yaml  README.md  app.py  controllers.py  data_transformations.py  docker-compose.yaml  faker_data.py  init.sql  pyproject.toml  views.py
data/invalid/: Products.csv  SalesOrder.csv  SalesPerson.csv  Target.csv
data/valid/: Products.csv  Sales.csv  SalesOrder.csv  SalesPerson.csv  Target.csv
models/: Products.py  Target.py
src/: Pipeline.py  app.py
src/actions/: clean_idea_transformations.py  data_transformations.py  dbt_build.py  s3_client.py  validate_models.py
src/models/: models.py
src/pages/: 1_📋_Logs.py
src/utils/: logger.py  utils.py
src/views/: view_actions.py  views.py
tasks/clean/: transformations.py
tasks/dbt/postgres_demo/: dbt_project.yml
tasks/s3/: client.py
validations/: models.py  validate.py
