[tool.poetry]
name = "aws-dbt-pipeline"
version = "0.1.0"
description = ""
authors = ["oselio <oseliocandido@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.2"
black = "^24.2.0"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
pre-commit = "^3.6.2"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"
streamlit = "^1.32.2"
pydantic = "^2.6.4"
faker = "^24.2.0"
openpyxl = "^3.1.2"
boto3 = "^1.34.64"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"